Added elasticsearch compose files. Refactored redis-persistent example to support volumes.

--- a/redis-single-node/redis-persistent-compose.yaml
+++ b/redis-single-node/redis-persistent-compose.yaml
@@ -9,6 +9,8 @@ services:
      - "6379:6379"
     tty: true
     volumes:
-      - type: bind
-        source: /dockerdata/redis
-        target: /data
+      - redis-volume:/data
+
+volumes:
+  redis-volume:
+    external: true
